[tool.poetry]
name = "dj"
readme = "README.md"
version = "0.0.8"
description = "DJ, the Django CLI"
repository = "https://github.com/aleontiev/dj"
authors = ["aleontiev <alonetiev@gmail.com>"]
license = "MIT"
include = ["dj/blueprints/**/*.j2"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
click = "^7.0"
six = "^1.12.0"
inflection = "^0.3.1"
jinja2 = "^2.10.1"
redbaron = "^0.9.2"
pyyaml = "^5.1.1"
tox = "^3.13.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest-cov = "*"
pytest = "*"
tox = "*"
requests = "*"
tox-pyenv = "*"
pytest-sugar = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
